bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: identifier expected but character literal found.
if (litMessage(): String == 'A') {
                            ^BDR:7: error: ')' expected but '}' found.
	}
        ^