bdr.BDR.scala.code
if (litMessage(): String == 'A') {
  avance()
}

